# kat7toVDIF

./: CMakeLists.txt  README.md  buildScript.sh  driver.cpp  inv_pfb.cu  inv_pfb.h  run.sh  test.sh
testSuite/: construct_test_data.sh  correlator.py  filter_generator.py  ipfb_generator.py  pfb_generator.py  snr.py  snr_no_plot.py  tone_generator.py
